fix docs layout

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </head>
-  <body style="max-width: 1200px">
+  <body style="max-width: 1200px; margin: auto; padding: .5em">
 
     <header>
       <h1 style="text-align: center">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
